Updates in v0.6.4
TYPES:
1. Check lower case only for method in CorrData.stack()

UTILS:
1. Minor bug fixes in read_gmtlines()

==================================================================
Updates in v0.6.3.1
1. Fixed the size issue when saving "time" to ASDF file. HDF file limits the attribute
  size to 64k or less. We split time to time_mean and np.float32(time) to reduce the size.
  This is a temporary fix. Hopefully HDF could lift the size limit for attributes.

Updates in v0.6.3
NOISE
1. Removed ncomp in do_correlation(). Setup a warning message if old usage is used.
2. Change defaults for acorr_only and xcorr_only both to False in do_correlation().
3. Added option to stack in merging(). This option could replace do_stacking() if no
  rotation. Renamed merging() to merge_pairs(). The old name is kept for compatibility.
4. Updated extract_corrdata() to read "side" attribute if available.
5. Added merge_chunks() to merge correlation files, to reduce the number of files, with
  the option for stacking.


DOWNLOADERS
1. Return inventory in get_event_waveforms()
2. Drop duplicates in get_sta_list() and fixed minor bug when channels might be skipped.
3. Change default region to globe in get_events()

UTILS
1. Added mag_duration(), modified from obspyDMT.utils.event_handler.py
2. Renamed qml_to_event_list() to qml2list(). Added option to convert to pandas dataframe.
3. Fixed a bug in slicing_trace(), where the index was float instead of integer.
4. Added get_filelist() and slice_list().
5. Fixed a bug in sclicing_trace() when returning zeros array with errors. changed to return
    empty arrays.

PLOTTING
1. Added plot_eventsequence() to plot event with time.

TYPES
1. Added "side" attribute in CorrData() to mark whether the corrdata is two-sided or one-side only.
2. Revised CorrData.plot() to check "side" attribute when plotting.
3. Added copy() method in CorrData class to allow the user to copy the object, to avoid directly
  modifying the object values.